# DeepJSCC

./: .gitignore  LICENSE  README.md  evaluate.py  plot_results.py  pyproject.toml  requirements.txt  train.py
assets/: ratio-1-12_train-snr-7_step600000.csv
deepjscc/: __init__.py  data.py  metrics.py  model.py
scripts/: evaluate_awgn_sweep.py  plot_fig4.py  run_awgn_sweep.py
tests/: test_model.py
